--- a/package.json
+++ b/package.json
@@ -77,5 +77,8 @@
 		"webpack": "^5.96.1",
 		"webpack-cli": "^5.1.4",
 		"webpack-stream": "^7.0.0"
+	},
+	"dependencies": {
+		"swiper": "^11.1.15"
 	}
 }
